--- a/index.html
+++ b/index.html
@@ -4,129 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Ultra Secreto</title>
-    <style>
-        /* Estilo base super sério */
-        body {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-            transition: background-color 0.3s;
-        }
-
-        .container {
-            text-align: center;
-            padding: 40px;
-            border: 4px dashed #7f8c8d;
-            border-radius: 20px;
-            transition: all 0.5s;
-        }
-
-        .title {
-            font-size: 3rem;
-            color: #e74c3c;
-            text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-bottom: 10px;
-        }
-
-        .warning {
-            font-size: 1.2rem;
-            margin-bottom: 50px;
-            color: #bdc3c7;
-        }
-
-        /* O Botão Proibido */
-        .crazy-button {
-            background-color: #c0392b;
-            color: white;
-            border: none;
-            padding: 20px 50px;
-            font-size: 2rem;
-            font-weight: 900;
-            border-radius: 15px;
-            cursor: pointer;
-            box-shadow: 0 10px #922b21;
-            transition: all 0.2s;
-            position: relative;
-        }
-
-        /* Pressionar o botão */
-        .crazy-button:active {
-            box-shadow: 0 2px #922b21;
-            transform: translateY(8px);
-        }
-
-        /* A mensagem que fica escondida */
-        .hidden-message {
-            opacity: 0;
-            margin-top: 40px;
-            font-size: 1.8rem;
-            color: #f1c40f;
-            font-weight: bold;
-            transform: translateY(-50px) scale(0.5);
-            transition: all 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-            pointer-events: none;
-        }
-
-        /* -------------------------------------------
-           AQUI COMEÇA A BAGUNÇA QUANDO PASSA O MOUSE!
-           ------------------------------------------- */
-
-        /* O botão treme e muda de cor */
-        .crazy-button:hover {
-            animation: tremedeira 0.1s infinite;
-            background-color: #9b59b6;
-            box-shadow: 0 10px #8e44ad;
-            color: yellow;
-        }
-
-        /* A mensagem escondida aparece pulando e girando */
-        .container:has(.crazy-button:hover) .hidden-message {
-            opacity: 1;
-            transform: translateY(0) scale(1.2) rotate(-5deg);
-        }
-
-        /* A caixa em volta perde a compostura */
-        .container:has(.crazy-button:hover) {
-            border-color: #f1c40f;
-            transform: scale(1.05);
-        }
-
-        /* O fundo da tela vira uma festa (usando a propriedade :has do CSS moderno) */
-        body:has(.crazy-button:hover) {
-            animation: luzesDeFesta 0.3s infinite alternate;
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* A fonte suprema da zoeira */
-        }
-
-        /* Animação do botão tremendo */
-        @keyframes tremedeira {
-            0% { transform: translate(2px, 1px) rotate(0deg); }
-            10% { transform: translate(-1px, -2px) rotate(-3deg); }
-            20% { transform: translate(-3px, 0px) rotate(3deg); }
-            30% { transform: translate(0px, 2px) rotate(0deg); }
-            40% { transform: translate(1px, -1px) rotate(3deg); }
-            50% { transform: translate(-1px, 2px) rotate(-3deg); }
-            60% { transform: translate(-3px, 1px) rotate(0deg); }
-            70% { transform: translate(2px, 1px) rotate(-3deg); }
-            80% { transform: translate(-1px, -1px) rotate(3deg); }
-            90% { transform: translate(2px, 2px) rotate(0deg); }
-            100% { transform: translate(1px, -2px) rotate(-3deg); }
-        }
-
-        /* Animação do fundo estilo balada */
-        @keyframes luzesDeFesta {
-            0% { background-color: #2c3e50; }
-            33% { background-color: #8e44ad; }
-            66% { background-color: #2980b9; }
-            100% { background-color: #d35400; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
