site do professor

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h1 class="title">Painel de Controle</h1>
         <p class="warning">Por favor, mantenha a calma e <strong>NÃO</strong> passe o mouse no botão abaixo.</p>
+        <a href="https://eduardo-da-silva.github.io/fundamentos-devops/intro/#praticas-de-versionamento"><p>site do professor</p></a>
         
         <button class="crazy-button">NÃO TOQUE</button>
         
